fix(swagger): Make swagger routes lowercase (#1366)
Make swagger routes lowercase
