# docs/swagger/swagger.json
@@ -4,116 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/Agents": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "List Agents",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.AgentsResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/rest.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/Configurations": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "List Configurations",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.ConfigurationsResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/rest.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/Destinations": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "List Destinations",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.DestinationsResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/rest.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/Processors": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "List Processors",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.ProcessorsResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/rest.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/Sources": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "List Sources",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.SourcesResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/rest.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/agent-versions": {
             "get": {
                 "produces": [
@@ -294,11 +184,31 @@
             }
         },
         "/agents": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List Agents",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.AgentsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "produces": [
                     "application/json"
                 ],
-                "summary": "delete agents by ids",
+                "summary": "Delete agents by ids",
                 "parameters": [
                     {
                         "description": "list of agent ids to delete",
@@ -670,6 +580,28 @@
                 }
             }
         },
+        "/configurations": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List Configurations",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ConfigurationsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/configurations/{name}": {
             "get": {
                 "produces": [
@@ -916,6 +848,28 @@
                 }
             }
         },
+        "/destinations": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List Destinations",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.DestinationsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/destinations/{name}": {
             "get": {
                 "produces": [
@@ -1065,6 +1019,28 @@
                         "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/processors": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List Processors",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ProcessorsResponse"
                         }
                     },
                     "500": {
@@ -1461,6 +1437,28 @@
                         "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/sources": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List Sources",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.SourcesResponse"
                         }
                     },
                     "500": {
